=head1 NAME

Changes - public release history for Data::Dumper

=head1 DESCRIPTION

=over 8

=item 2.167_01  (Jul 31 2017)

CPAN dev release with the accumulated changes from core perl.

=item 2.166 (Nov 29 2016)

Reduce memory usage by not importing from Carp
Reduce memory usage by removing unused overload require.

=item 2.165 (Nov 20 2016)

Remove impediment to compiling under C++11.

=item 2.164 (Nov 12 2016)

The XS implementation now handles the C<Deparse> option, so using it no
longer forces use of the pure-Perl version.

=item 2.161 (Jul 11 2016)

Perl 5.12 fix/workaround until fixed PPPort release.

Pre-5.12 fixes for test dependency.

=item 2.160 (Jul 3 2016)

Now handles huge inputs on 64bit perls.

Add Trailingcomma option. This is as suggested in RT#126813.

Significant refactoring of XS implementation.

Pure Perl implementation fixes in corner cases ("\n" dumped raw").

=item 2.154 (Sep 18 2014)

Most notably, this release fixes CVE-2014-4330:

  Don't recurse infinitely in Data::Dumper

  Add a configuration variable/option to limit recursion when dumping
  deep data structures.
  [...]
  This patch addresses CVE-2014-4330.  This bug was found and
  reported by: LSE Leading Security Experts GmbH employee Markus
  Vervier.

On top of that, there are several minor big fixes and improvements,
see "git log" if the core perl distribution for details.

=item 2.151 (Mar 7 2014)

A "useqq" implementation for the XS version of Data::Dumper.

Better compatibility wrt. hash key quoting between PP and XS
versions of Data::Dumper.

EBCDIC fixes.

64bit safety fixes (for very large arrays).

Build fixes for threaded perls.

clang warning fixes.

Warning fixes in tests on older perls.

Typo fixes in documentation.

=item 2.145 (Mar 15 2013)

Test refactoring and fixing wide and far.

Various old-perl compat fixes.

=item 2.143 (Feb 26 2013)

Address vstring related test failures on 5.8: Skip tests for
obscure case.
